Fixing label name for subterm for Subjects and adding css to display block on mobile.

--- a/public/css/partials/_collections.scss
+++ b/public/css/partials/_collections.scss
@@ -27,6 +27,11 @@
 
 			> span {
 				margin-left: 5px;
+				display: block;
+
+				@include breakpoint($min, $mobile-phone) {
+					display: inline-block;
+				}
 			}
 		}
 
